edit index.html and style.css and fixed share save and like alignment.

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ a {
     justify-content: space-around;
     top: 0;
     position: sticky;
-    background-color: grey;
+    background-color: white;
 }
 
 #container-1-1 {
@@ -151,18 +151,7 @@ iframe {
 }
 
 
-/*
-.video-info-container {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    box-sizing: content-box;
-    padding-right: 23rem;
-    border-bottom: 0.5px solid black;
-    background-color: white;
-    flex-wrap: wrap;
 
-}*/
 
 .video-info-container {
     background-color: white;
@@ -170,6 +159,8 @@ iframe {
     border-right: 1rem solid #EEEEEE;
     border-bottom: 1rem solid #EEEEEE;
     padding: 1rem;
+    width: 1066px;
+
 }
 
 #h3 {
@@ -182,25 +173,28 @@ iframe {
 .youtuber-info {
     display: flex;
     position: relative;
-    align-self: space-evenly;
+    align-self: stretch;
 
 }
 
-#odin-container {
-    padding-left: 0.3rem;
-}
+
 
 
 
 #views {
     display: inline;
-    position: absolute;
+    position: relative;
     margin-top: -2rem;
-    margin-left: 50rem;
-    float: right;
+    border-color: blue;
+    width: auto;
+    border-bottom-width: 2px;
+    border-style: solid;
+    margin-left: 5rem;
+    padding-left: 82%;
     font-weight: 400;
     font-size: 1.1rem;
-    border-bottom: 1.5px solid blue;
+
+
 }
 
 #subscribe {
@@ -222,7 +216,7 @@ iframe {
     text-align: center;
     box-sizing: content-box;
     border-collapse: collapse;
-    align-content: flex-end;
+
 }
 
 button ~ span {
@@ -233,17 +227,19 @@ button ~ span {
 }
 
 .expression {
-    width: 50rem;
+    width: 100%;
     margin-top: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     background-color: white;
+    border-top: 0.2rem solid #EEEEEE;
+    padding-top: 1rem;
 }
 
-#exp-number {
-    margin-left: 48.5rem;
-    position: absolute;
+
+#more {
+    padding-bottom: 0.45rem;
 }
 
 .number-of-comments-section {
@@ -318,6 +314,8 @@ select {
 
 #choose-language-image {
     object-fit: cover;
+    border-top: 1.5rem;
+    border-top: 1rem solid #EEEEEE;
 }
 
 #youtube-logo-footer {
